body overflow hidden for dual scroll issues

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,6 +17,7 @@ html {
 }
 
 body {
+  overflow: hidden !important;
   padding-top: 60px;
 }
 
